[package]
name = "mastermind"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rgb = { version = "0.8.52", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
